# bluetooth-page-turner-esp32-rust

./: .gitignore  CLAUDE.md  Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
src/: ble_hid.rs  main.rs  touch.rs
